src/test/testFiles/invalid/semanticErrors/incorrectNumberOfIndicesForArray.manimdsl
let arr = Array<number>(5);
arr[0][0] = 1;